// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeSample should change code sample to selected language if changed 1`] = `
<div class="syn-code-block">
  <div class="syn-code-block-header syn-flex justify-space-between align-center"><span class="syn-overline syn-text-light-primary syn-mb-0 syn-ml-16 syn-mr-8"></span>
    <div class="syn-ma-8 syn-flex align-center"><select class="syn-code-language-selector syn-mr-8">
        <option value="python">
          python
        </option>
        <option value="javascript">
          javascript
        </option>
      </select> <button title="Copy" class="syn-btn no-padding"><i class="material-icons syn-ma-4">content_copy</i></button></div>
  </div>
  <div class="syn-code-block-body">
    <figure class="highlight python" hidden=""><pre><code data-lang="python" class="language-python"><span class="kn">import</span> <span class="nn">Algorithmia</span></code></pre>
    </figure>
    <figure class="highlight javascript"><pre><code data-lang="javascript" class="language-javascript"><span class="kd">var</span> <span class="nx">input</span> <span class="o">=</span> <span class="s2">"YOUR_USERNAME"</span><span class="p">;</span></code></pre>
    </figure>
  </div>
</div>
`;

exports[`CodeSample should render default slot content if no custom content provided 1`] = `
<div class="syn-code-block">
  <div class="syn-code-block-header syn-flex justify-space-between align-center"><span class="syn-overline syn-text-light-primary syn-mb-0 syn-ml-16 syn-mr-8"></span>
    <div class="syn-ma-8 syn-flex align-center">
      <!----> <button title="Copy" class="syn-btn no-padding"><i class="material-icons syn-ma-4">content_copy</i></button></div>
  </div>
  <div class="syn-code-block-body"><pre><code>// Sample Code Block
console.log('Hello world!')</code></pre>
  </div>
</div>
`;

exports[`CodeSample should render provided content in slot 1`] = `
<div class="syn-code-block">
  <div class="syn-code-block-header syn-flex justify-space-between align-center"><span class="syn-overline syn-text-light-primary syn-mb-0 syn-ml-16 syn-mr-8"></span>
    <div class="syn-ma-8 syn-flex align-center">
      <!----> <button title="Copy" class="syn-btn no-padding"><i class="material-icons syn-ma-4">content_copy</i></button></div>
  </div>
  <div class="syn-code-block-body">
    <figure class="highlight bash"><pre><code data-lang="bash" class="language-bash">POST https://api.algorithmia.com/v1/algo/:owner/:algoname</code></pre>
    </figure>
  </div>
</div>
`;

exports[`CodeSample should show language dropdown and hide additional figures if multiple provided 1`] = `
<div class="syn-code-block">
  <div class="syn-code-block-header syn-flex justify-space-between align-center"><span class="syn-overline syn-text-light-primary syn-mb-0 syn-ml-16 syn-mr-8"></span>
    <div class="syn-ma-8 syn-flex align-center"><select class="syn-code-language-selector syn-mr-8">
        <option value="python">
          python
        </option>
        <option value="javascript">
          javascript
        </option>
      </select> <button title="Copy" class="syn-btn no-padding"><i class="material-icons syn-ma-4">content_copy</i></button></div>
  </div>
  <div class="syn-code-block-body">
    <figure class="highlight python"><pre><code data-lang="python" class="language-python"><span class="kn">import</span> <span class="nn">Algorithmia</span></code></pre>
    </figure>
    <figure class="highlight javascript" hidden=""><pre><code data-lang="javascript" class="language-javascript"><span class="kd">var</span> <span class="nx">input</span> <span class="o">=</span> <span class="s2">"YOUR_USERNAME"</span><span class="p">;</span></code></pre>
    </figure>
  </div>
</div>
`;

exports[`CodeSample should use code-sample-language instead of data-lang if provided 1`] = `
<div class="syn-code-block">
  <div class="syn-code-block-header syn-flex justify-space-between align-center"><span class="syn-overline syn-text-light-primary syn-mb-0 syn-ml-16 syn-mr-8"></span>
    <div class="syn-ma-8 syn-flex align-center"><select class="syn-code-language-selector syn-mr-8">
        <option value="python">
          python
        </option>
        <option value="JavaScript">
          JavaScript
        </option>
      </select> <button title="Copy" class="syn-btn no-padding"><i class="material-icons syn-ma-4">content_copy</i></button></div>
  </div>
  <div class="syn-code-block-body">
    <figure class="highlight python"><pre><code data-lang="python" class="language-python"><span class="kn">import</span> <span class="nn">Algorithmia</span></code></pre>
    </figure>
    <div code-sample-language="JavaScript">
      <figure class="highlight JavaScript" hidden=""><pre><code data-lang="javascript" class="language-javascript"><span class="kd">var</span> <span class="nx">input</span> <span class="o">=</span> <span class="s2">"YOUR_USERNAME"</span><span class="p">;</span></code></pre>
      </figure>
    </div>
  </div>
</div>
`;
